fixed letter spacing for content

--- a/resources/css/aboutMe.css
+++ b/resources/css/aboutMe.css
@@ -10,7 +10,7 @@ body {
 	font-family: "myriad-set-pro_thin", "Sans-Serif";
 	width: 100%;
 	height: 100%;
-	letter-spacing: 0.5px;
+	letter-spacing: 0.1em;
 }
 
 html {
