--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -8,7 +8,7 @@ body {
 	background: #19191A;
 	color: #f9f9f9;
 	font-family: "myriad-set-pro_thin", "Sans-Serif";
-	letter-spacing: 0.5px;
+	letter-spacing: 0.1em;
 	height: 100%;
 }
 
